<resources>
    <string name="app_name">Proiect Trivia</string>
    <string name="question_mark">question mark</string>
    <string name="welcome">Welcome!</string>
    <string name="password">Password</string>
    <string name="show">SHOW</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="play">Play</string>
    <string name="statistics">Statistics</string>
    <string name="attempted_questions">Attempted Questions :</string>
    <string name="correct">Correct :</string>
    <string name="incorrect">Incorrect :</string>
    <string name="improvement">You need improvement!</string>
    <string name="average">You are an average quizzer!</string>
    <string name="above_average">You are an above average quizzer!</string>
    <string name="amazing">You are an amazing quizzer! Congratulations!</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="computer">Computer</string>
    <string name="sports">Sports</string>
    <string name="inventions">Inventions</string>
    <string name="general_knowledge">General Knowledge</string>
    <string name="science">Science</string>
    <string name="english">English</string>
    <string name="authors">Authors</string>
    <string name="mathematics">Mathematics</string>
    <string name="capitals">Capitals</string>
    <string name="currency">Currency</string>
    <string name="reset_highscore">Reset Highscore</string>
    <string name="header">header</string>
    <string name="books">Books</string>
    <string name="scorecard">Scorecard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="start">START</string>
    <string name="parola">Parolă</string>
    <string name="bineativenit">BINE AȚI VENIT!</string>
    <string name="parolauitata">Parolă uitată?</string>
</resources>
